syntax = "proto3";

package pb;
option go_package = "github.com/dnr/styx/pb";

import "params.proto";

enum MountState {
  Unknown          = 0;  // initial value
  Requested        = 1;  // requested but not mounted yet
  Mounted          = 2;  // mounted
  MountError       = 3;  // got error mounting
  UnmountRequested = 4;  // was mounted then requested unmount
  Unmounted        = 5;  // unmounted
  Deleted          = 6;  // deleted (not used now)
  Materialized     = 7;  // not mounted but copied out to fs
}

// key: "slab" / <u16 BE slabid> / <u32 BE block address>
// value: <hash bits of digest>
// bucket sequence holds next chunk

// key: "slab" / <u16 BE slabid> / <u32 BE 0x80000000 | block address> (high bit set)
// value: empty
// present if data has been fetched

// key: "chunk" / <hash_bits of digest>
// value: <u16 BE slab id> <u32 BE block address> ( <sph prefix bits> )*

// key: "image" / <store path hash (nix base32)>
// value:
message DbImage {
  // full store path including name
  string store_path = 2;
  // which upstream this was from
  string upstream = 3;
  // system id from syschecker
  int64 syschecker_system = 4;

  // is it mounted and where?
  MountState mount_state = 5;
  string mount_point = 6;
  string last_mount_error = 7;

  // size of erofs image
  int64 image_size = 1;
  bool is_bare = 10;

  reserved 8 to 9;
}

// key: "manifest" / <store path hash (nix base32)>
// value: SignedMessage (manifest envelope)

// key: "meta" / "params"
message DbParams {
  DaemonParams params = 1;
  repeated string pubkey = 2;
}
