syntax = "proto3";

package pb;
option go_package = "github.com/dnr/styx/pb";

import "entry.proto";
import "manifest_meta.proto";
import "params.proto";

message Manifest {
  GlobalParams params = 1;
  repeated Entry entries = 3;

  // build parameters
  int32 small_file_cutoff = 2;

  // Metadata on how this was generated
  ManifestMeta meta = 10;
}
